# Mr-Fresh-Coin

./: .gitignore  Cargo.toml  README.md  build.ps1  devnet-test.json  rust-toolchain.toml
src/: lib.rs  tests.rs
src/js/: package-lock.json  package.json  tsconfig.json
src/js/cli/: index.ts
src/js/sdk/: index.ts
